# distribution-pandas-dtype

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
src/distribution/: __init__.py  accessor.py  array.py  base.py  bernoulli.py  categorical.py  lognorm.py
src/structured/: __init__.py  base.py
tests/: test_base.py  test_categorical.py  test_lognorm.py  test_version.py
